Cells - 0.1 2020
Initial commits, everything WIP. Much work to do!

Added: bound checks for nodes at the functions to check if node is in legal range!
New: file.c: fann_save_cells() and fann_load_cells() functions.
string.c added.

New: fann_load_cell () cleanup and BUGFIXES!
set_node_link: overflow checks added!

Added checks to functions, if cell structure was allocated right.
And changed the library functions: for exp. "fann_get_output" to give a return value for success or failure. The return value is given by a pointer variable:

S2 fann_get_output (struct cell *cells, S8 cell, S8 node, S8 output, F8 *return_value);

Load cells output/input of links BUGFIX!
fann_run_ann_go_links: for loops of cells/layers swapped in order.

Renamed all Cells functions to the beginning: "Cells_".

Updated make scripts to link math library at last lib and fixing a linker runtime error!

-- Stefan Pietzonke <jay-t@gmx.net> Sun Jul 12 2020 16:27 +0200