@@ -1,7 +1,7 @@
 #!/bin/sh
 
-clang -Wall -fPIC -g -c cells.c file.c string.c -O3 -fomit-frame-pointer -g
-clang -shared -Wl,-soname,libcells.so.1 -o libcells.so.1.0 cells.o file.o string.o
+clang-15 -Wall -fPIC -g -c cells.c file.c string.c -O3 -fomit-frame-pointer -g
+clang-15 -shared -Wl,-soname,libcells.so.1 -o libcells.so.1.0 cells.o file.o string.o
 cp libcells.so.1.0 libcells.so
 
 sudo cp libcells.so /usr/local/lib
